GNU grep NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug fixes

  Searching a directory with at least 100,000 entries no longer fails
  with "Operation not supported" and exit status 2. Now, this prints 1
  and no diagnostic, as expected:
    $ mkdir t && cd t && seq 100000|xargs touch && grep -r x .; echo $?
    1
  [bug introduced in grep 3.11]

  -mN where 1 < N no longer mistakenly lseeks to end of input merely
  because standard output is /dev/null.

** Changes in behavior

  On Windows platforms and on AIX in 32-bit mode, grep now supports
  Unicode characters outside the Basic Multilingual Plane.


* Noteworthy changes in release 3.11 (2023-05-13) [stable]

** Bug fixes

  With -P, patterns like [\d] now work again.  Fixing this has caused
  grep to revert to the behavior of grep 3.8, in that patterns like \w
  and \b go back to using ASCII rather than Unicode interpretations.
  However, future versions of GNU grep and/or PCRE2 are likely to fix
  this and change the behavior of \w and \b back to Unicode again,
  without breaking [\d] as 3.10 did.
  [bug introduced in grep 3.10]

  grep no longer fails on files dated after the year 2038,
  when running on 32-bit x86 and ARM hosts using glibc 2.34+.
  [bug introduced in grep 3.9]

  grep -P no longer fails to match patterns using negated classes
  like \D or \W when linked with PCRE2 10.34 or newer.
  [bug introduced in grep 3.8]


** Changes in behavior

  grep --version now prints a line describing the version of PCRE2 it uses.
  For example, it prints this when built with the very latest from git:
    grep -P uses PCRE2 10.43-DEV 2023-04-14
  or this with what's currently available in Fedora 37:
    grep -P uses PCRE2 10.40 2022-04-14

  previous versions of grep wouldn't respect the user provided settings for
  PCRE_CFLAGS and PCRE_LIBS when building if a libpcre2-8 pkg-config module
  was found.

